Third commit (fixed portfolio gallery)

--- a/wp-content/themes/modeling-portfolio/portfolio.html
+++ b/wp-content/themes/modeling-portfolio/portfolio.html
@@ -117,7 +117,7 @@
 		            <button class="btn btn-default filter-button" data-filter="modeling2">Modeling in Lithuania</button>
 		            <button class="btn btn-default filter-button" data-filter="modeling3">Modeling in Morocco</button>
 		            <button class="btn btn-default filter-button" data-filter="modeling4">Modeling in France</button>
-		        </div><!-- WordPress Live Development Session + Q&A - Part 2    7:00 -->
+		        </div>
 		        <br/>
 
 				<div class="container">
